--- a/read_comics/templates/blocks/layout/header/header.html
+++ b/read_comics/templates/blocks/layout/header/header.html
@@ -56,8 +56,7 @@
           </li>
           {% if watched_missing_issues_count > 0 %}
             <li class="nav-item dropdown-notification">
-              <a class="nav-link nav-link-label" href="app-email.html" data-toggle="tooltip" data-placement="top"
-                 title="" data-original-title="Email">
+              <a class="nav-link nav-link-label" href="{% url "missing_issues:watched" %}">
                 <i class="ficon fad fa-eye"></i>
                 <span class="badge badge-pill badge-warning badge-up">{{ watched_missing_issues_count|intcomma }}</span>
               </a>
