--- a/read_comics/pages/templates/pages/home.html
+++ b/read_comics/pages/templates/pages/home.html
@@ -15,7 +15,7 @@
               <i class="fad fa-book-open"></i>
             </div>
             <p class="text-muted mb-0 line-ellipsis">Issue{{ matched_stats.issues_count|pluralize }}</p>
-            <h2 class="mb-0">{{ matched_stats.issues_count|intcomma  }}</h2>
+            <h2 class="mb-0">{{ matched_stats.issues_count|intcomma }}</h2>
           </div>
         </div>
       </div>
@@ -27,7 +27,7 @@
               <i class="fad fa-building"></i>
             </div>
             <p class="text-muted mb-0 line-ellipsis">Publisher{{ matched_stats.publishers_count|pluralize }}</p>
-            <h2 class="mb-0">{{ matched_stats.publishers_count|intcomma  }}</h2>
+            <h2 class="mb-0">{{ matched_stats.publishers_count|intcomma }}</h2>
           </div>
         </div>
       </div>
@@ -39,7 +39,7 @@
               <i class="fad fa-books"></i>
             </div>
             <p class="text-muted mb-0 line-ellipsis">Story Arc{{ matched_stats.story_arcs_count|pluralize }}</p>
-            <h2 class="mb-0">{{ matched_stats.story_arcs_count|intcomma  }}</h2>
+            <h2 class="mb-0">{{ matched_stats.story_arcs_count|intcomma }}</h2>
           </div>
         </div>
       </div>
@@ -51,7 +51,7 @@
               <i class="fad fa-book-spells"></i>
             </div>
             <p class="text-muted mb-0 line-ellipsis">Volume{{ matched_stats.volumes_count|pluralize }}</p>
-            <h2 class="mb-0">{{ matched_stats.volumes_count|intcomma  }}</h2>
+            <h2 class="mb-0">{{ matched_stats.volumes_count|intcomma }}</h2>
           </div>
         </div>
       </div>
@@ -63,7 +63,7 @@
               <i class="fad fa-bat"></i>
             </div>
             <p class="text-muted mb-0 line-ellipsis">Character{{ matched_stats.characters_count|pluralize }}</p>
-            <h2 class="mb-0">{{ matched_stats.characters_count|intcomma  }}</h2>
+            <h2 class="mb-0">{{ matched_stats.characters_count|intcomma }}</h2>
           </div>
         </div>
       </div>
@@ -75,7 +75,7 @@
               <i class="fad fa-users"></i>
             </div>
             <p class="text-muted mb-0 line-ellipsis">Team{{ matched_stats.teams_count|pluralize }}</p>
-            <h2 class="mb-0">{{ matched_stats.teams_count|intcomma  }}</h2>
+            <h2 class="mb-0">{{ matched_stats.teams_count|intcomma }}</h2>
           </div>
         </div>
       </div>
@@ -87,7 +87,7 @@
               <i class="fad fa-map-marker-alt"></i>
             </div>
             <p class="text-muted mb-0 line-ellipsis">Location{{ matched_stats.locations_count|pluralize }}</p>
-            <h2 class="mb-0">{{ matched_stats.locations_count|intcomma  }}</h2>
+            <h2 class="mb-0">{{ matched_stats.locations_count|intcomma }}</h2>
           </div>
         </div>
       </div>
@@ -99,7 +99,7 @@
               <i class="fad fa-swords"></i>
             </div>
             <p class="text-muted mb-0 line-ellipsis">Object{{ matched_stats.objects_count|pluralize }}</p>
-            <h2 class="mb-0">{{ matched_stats.objects_count|intcomma  }}</h2>
+            <h2 class="mb-0">{{ matched_stats.objects_count|intcomma }}</h2>
           </div>
         </div>
       </div>
@@ -111,7 +111,7 @@
               <i class="fad fa-brain"></i>
             </div>
             <p class="text-muted mb-0 line-ellipsis">Concept{{ matched_stats.concepts_count|pluralize }}</p>
-            <h2 class="mb-0">{{ matched_stats.concepts_count|intcomma  }}</h2>
+            <h2 class="mb-0">{{ matched_stats.concepts_count|intcomma }}</h2>
           </div>
         </div>
       </div>
@@ -129,55 +129,67 @@
                 Person
               {% endif %}
             </p>
-            <h2 class="mb-0">{{ matched_stats.people_count|intcomma  }}</h2>
+            <h2 class="mb-0">{{ matched_stats.people_count|intcomma }}</h2>
           </div>
         </div>
       </div>
 
       {% if user.is_staff %}
         <div class="col-xl-3 col-sm-6">
-        <div class="card text-center div-link">
-          <a class="div-default-link" href="{% url "missing_issues:all" %}"></a>
-          <div class="card-body">
-            <div class="badge-circle badge-circle-lg badge-circle-light-danger mx-auto my-1">
-              <i class="fad fa-eye"></i>
+          <div class="card text-center div-link">
+            <a class="div-default-link" href="{% url "missing_issues:all" %}"></a>
+            <div class="card-body">
+              <div class="badge-circle badge-circle-lg badge-circle-light-danger mx-auto my-1">
+                <i class="fad fa-eye"></i>
+              </div>
+              <p class="text-muted mb-0 line-ellipsis">
+                {% if missing_issues_count > 1 %}
+                  Missed Issues
+                {% else %}
+                  Missed Issue
+                {% endif %}
+              </p>
+              <h2 class="mb-0">{{ missing_issues_count|intcomma }}</h2>
             </div>
-            <p class="text-muted mb-0 line-ellipsis">
-              {% if missing_issues_count > 1 %}
-                Missed Issues
-              {% else %}
-                Missed Issue
-              {% endif %}
-            </p>
-            <h2 class="mb-0">{{ missing_issues_count|intcomma }}</h2>
           </div>
         </div>
-      </div>
       {% endif %}
 
     </div>
   </section>
 
   <section id="last-update" class="card">
-  <div class="card-header">
-    <h4 class="card-title">Last new issues update: {{ last_update_day|date:"DATE_FORMAT" }}</h4>
-  </div>
-  <div class="card-body">
-    <div class="card-text">
-      <p>Added {{ new_issues_count }} new issue{{ new_issues_count|pluralize }}</p>
-      <ul>
-      <ul>
-        {% for new_issue in new_issues %}
-            {% ifchanged new_issue.volume %}
-              </ul>
-              <li><a href="{% url "volumes:detail" new_issue.volume.slug %}">{{ new_issue}}</a></li>
-              <ul>
-            {% endifchanged %}
-          <li><a href="{% url "issues:detail" new_issue.slug %}">{{ new_issue.get_full_name }}</a></li>
-        {% endfor %}
-        </ul>
-      </ul>
+    <div class="card-header">
+      <h4 class="card-title">Last new issues update: {{ last_update_day|date:"DATE_FORMAT" }}</h4>
     </div>
-  </div>
-</section>
+    <div class="card-body">
+      <div class="card-text">
+        <p>Added {{ new_issues_count }} new issue{{ new_issues_count|pluralize }}</p>
+          <ul>
+              {% for new_issue in new_issues %}
+                {% ifchanged new_issue.volume.publisher %}
+                  {% if not forloop.first %}
+                    </ul></li></ul></li>
+                  {% endif %}
+                  <li>
+                    <a href="{% url "publishers:detail" new_issue.volume.publisher.slug %}">{{ new_issue.volume.publisher }}</a>
+                    <ul>
+                {% endifchanged %}
+                {% ifchanged new_issue.volume %}
+                    {% ifchanged new_issue.volume.publisher %}
+                    {% else %}
+                      </ul></li>
+                    {% endifchanged %}
+                  <li>
+                    <a href="{% url "volumes:detail" new_issue.volume.slug %}">{{ new_issue.volume.name }}
+                    ({{ new_issue.volume.start_year|default_if_none:"Unknown" }})</a>
+                  <ul>
+
+                {% endifchanged %}
+                <li><a href="{% url "issues:detail" new_issue.slug %}">{{ new_issue.volume.name }} #{{ new_issue.number }} {{ new_issue.name|default_if_none:'' }}</a></li>
+              {% endfor %}
+          </ul>
+      </div>
+    </div>
+  </section>
 {% endblock %}
